<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">No excuses</string>
    <string name="content_description">image</string>
    <string name="sww">Vaya, algo ha salido mal</string>
    <string name="native_ad">ca-app-pub-4515698012373396/5226929413</string>
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>
    <string name="bottom_nav_home">Inicio</string>
    <string name="bottom_nav_maximum">Máximos</string>
    <string name="bottom_nav_calendar">Calendario</string>
    <string name="bottom_nav_notes">Notas</string>
    <string name="bottom_nav_stretching">Estiramientos</string>
    <string name="drawer_item_default_routines">Rutinas</string>
    <string name="drawer_item_my_routines">Mis entrenamientos</string>
    <string name="drawer_item_exercises">Ejercicios</string>
    <string name="drawer_item_maximums">Máximos</string>
    <string name="drawer_item_calendar">Calendario</string>
    <string name="drawer_item_fav_exercises">Favoritos</string>
    <string name="drawer_item_stretching">Estiramientos</string>
    <string name="drawer_item_notes">Notas</string>
    <string name="drawer_version">Versión %s</string>
    <string name="menu_none_routine_pinned">¡Fija aqui la rutina que estés haciendo!</string>
    <string name="menu_none_routine_pinned_description">Solo tienes que pulsar el icono</string>
    <string name="menu_default_routines_title">Rutinas</string>
    <string name="menu_default_routines_description">Ponte en forma con los planes de entrenamiento creados para ganar masa muscular, definir o simplemente mantener la línea.</string>
    <string name="menu_my_routines_title">Mis entrenamientos</string>
    <string name="menu_my_routines_description">Crea tus propias rutinas de entrenamiento seleccionando ejercicios y grupos musculares. Divide la rutina en días para ser más eficiente y llevar tu entrenamiento al siguiente nivel.</string>
    <string name="menu_my_routines_new_routine">Crear nueva rutina</string>
    <string name="menu_my_routines_calendar">Calendario</string>
    <string name="menu_my_routines_calendar_description">Cuando registres una rutina aparecerá en el calendario el día que hayas entrenado y las rutinas realizadas. Organízate y lleva un registro de todo tu trabajo y de tus planes de entrenamientos.</string>
    <string name="menu_my_routines_calendar_nothing_saved">No tienes nada registrado</string>
    <string name="menu_my_routines_calendar_one_saved">Tienes registrada 1 sesión</string>
    <string name="menu_my_routines_calendar_saved">Tienes registradas %s sesiones</string>
    <string name="menu_my_actual_routine">Actualmente estás haciendo:</string>
    <string name="menu_exercises_title">Ejercicios</string>
    <string name="menu_exercises_description">Echa un vistazo más detallado a todos los ejercicios.</string>
    <string name="menu_stretch_title">Estiramientos</string>
    <string name="menu_stretch_detail">La práctica regular de estiramientos antes y después del ejercicio es fundamental para maximizar el rendimiento, prevenir lesiones, y mejorar la flexibilidad y la recuperación muscular.</string>
    <string name="menu_favs_title">Ejercicios favoritos</string>
    <string name="menu_favs_description">Aqui puedes ver todos los ejercicios que hayas guardado previamente como favorito. Para marcar un ejercicio como favorito, accede al ejercicio que más te guste y dale a la estrellita que aparece al lado del nombre del ejercicio.</string>
    <string name="menu_notes_title">Notas</string>
    <string name="menu_notes_description">Está bien confiar en la memoria de uno mismo, pero siempre es mejor dejarlo por escrito.</string>
    <string name="menu_unpin_routine_title">Desfijar rutina</string>
    <string name="menu_unpin_routine">¿Quieres desfijar esta rutina?</string>
    <string name="menu_unpin_routine_description">Para volver a fijarla tendrás que buscarla y pulsar de nuevo en el icono de la chincheta.</string>
    <string name="menu_unpin_note_title">Desfijar nota</string>
    <string name="menu_unpin_note">¿Quieres desfijar esta nota?</string>
    <string name="menu_unpin_note_description">Para volver a fijarla tendrás que acceder a la sección Notas y pulsar de nuevo en el icono de la chincheta.</string>
    <string name="menu_unpin_note_btn">Desfijar</string>
    <string name="mgroups_toolbar">Grupos musculares</string>
    <string name="mgroups_cardio">cardio</string>
    <string name="mgroups_forearm">antebrazo</string>
    <string name="mgroups_man">H</string>
    <string name="mgroups_woman">M</string>
    <string name="exercise_dialog_category">Ejercicio de %s</string>
    <string name="exercise_dialog_video">Vídeo</string>
    <string name="exercise_dialog_hide_video">Ocultar</string>
    <string name="exercise_dialog_hide_muscle_wiki">Ver en Muscle Wiki</string>
    <string name="exercise_dialog_description">¿Cómo se hace?</string>
    <string name="exercise_dialog_involved_muscles">Músculos involucrados</string>
    <string name="exercise_dialog_search">Buscar en internet</string>
    <string name="exercise_dialog_url_wrong">No parece que la url sea correcta</string>
    <string name="exercise_add_new_one">Añade tu propio ejercicio</string>
    <string name="exercise_add_title">Crear ejercicio</string>
    <string name="exercise_add_image">Seleccionar imagen (opcional)</string>
    <string name="exercise_add_name">Nombre</string>
    <string name="exercise_add_description">Cómo se hace (opcional)</string>
    <string name="exercise_add_muscles">Músculos involucrados (opcional)</string>
    <string name="exercise_add_external_url">Url externa (opcional)</string>
    <string name="exercise_add_btn">Crear ejercicio</string>
    <string name="exercise_add_delete_title">Eliminar ejercicio</string>
    <string name="exercise_add_delete_text">¿Quieres eliminar definitivamente %s?</string>
    <string name="exercise_add_delete_yes">Eliminar</string>
    <string name="exercise_add_delete_cancel">Cancelar</string>
    <string name="exercise_add_delete_btn">Eliminar</string>
    <string name="exercise_add_edit_btn">Editar</string>
    <string name="first_dialog_explanation_info">Información</string>
    <string name="first_dialog_explanation_one">Una <b>rutina</b> está compuesta por una serie de días.</string>
    <string name="first_dialog_explanation_two">Los <b>días</b> contienen los ejercicios que forman tu entrenamiento.</string>
    <string name="first_dialog_explanation_three">Por lo general, para que el músculo progrese adecuadamente, evitar lesiones y que el cuerpo no se acostumbre al entrenamiento, las rutinas deberían durar entre <b>5 y 8 semanas</b>.</string>
    <string name="first_dialog_edit"><b>Mantén pulsado</b> un ejercicio para <b>moverlo</b></string>
    <string name="first_dialog_routine_days">4</string>
    <string name="first_dialog_routine_title">Mayo y Junio</string>
    <string name="first_dialog_routine_description">Enfocada en pierna</string>
    <string name="first_dialog_routine_accept">Entendido</string>
    <string name="first_dialog_day">Día 1</string>
    <string name="first_dialog_day_title">Lunes</string>
    <string name="first_dialog_exercise_name">Press banca</string>
    <string name="first_dialog_exercise_category">pecho</string>
    <string name="first_dialog_exercise_series">4</string>
    <string name="first_dialog_exercise_rest">2</string>
    <string name="routines_toolbar">Rutinas</string>
    <string name="df_routines_series">Series:</string>
    <string name="df_routines_reps">Reps:</string>
    <string name="df_routines_rest">Descanso</string>
    <string name="df_routines_super_serie">Super serie con el siguiente ejercicio</string>
    <string name="df_routines_rest_min">min/serie</string>
    <string name="df_routines_add_to_mine">Añadir a mis entrenamientos</string>
    <string name="df_routines_add">Añadir rutina</string>
    <string name="df_routines_add_description">¿Quieres añadir %s a <i>\"Mis entrenamientos\"?</i></string>
    <string name="df_routines_add_description_two">Podrás renombrarla, añadir, eliminar y editar días y ejercicios a tu gusto.</string>
    <string name="df_routines_add_completed">Añadida correctamente</string>
    <string name="df_routines_add_btn">Añadir</string>
    <string name="df_routines_add_cancel">Cancelar</string>
    <string name="my_routines_toolbar">Mis entrenamientos</string>
    <string name="my_routines_day">Día</string>
    <string name="my_routines_days">Días</string>
    <string name="my_routines_add_btn">Añadir rutina</string>
    <string name="my_routines_no_description">Sin descripción</string>
    <string name="my_routines_empty">No has creado\nninguna rutina.</string>
    <string name="days_empty">No tienes días\npara esta rutina.</string>
    <string name="days_add_btn">Añadir día</string>
    <string name="days_day">Día %s</string>
    <string name="days_one_exercise">1 ejercicio</string>
    <string name="days_exercises">%s ejercicios</string>
    <string name="mexercises_see_exercise">Ver ejercicio</string>
    <string name="mexercises_empty">No tienes ningún ejercicio\nasignado a este día.</string>
    <string name="mexercises_serie">Serie</string>
    <string name="mexercises_series">Series</string>
    <string name="mexercises_empty_data">\?</string>
    <string name="mexercises_add_data">Añade información</string>
    <string name="mexercises_add_btn">Añadir ejercicio</string>
    <string name="mexercises_add_completed">Ejercicio añadido</string>
    <string name="mexercises_register_in_calendar">Pulsa aqui si quieres registrar el día de entrenamiento en el calendario.</string>
    <string name="days_exercise_dialog_serie">Serie %s</string>
    <string name="days_exercise_dialog_kg">Kg</string>
    <string name="days_exercises_reps">Reps</string>
    <string name="days_exercise_dialog_reps_hint">0</string>
    <string name="days_exercise_dialog_weight_hint">00.00</string>
    <string name="days_exercise_dialog_time_text">Descanso</string>
    <string name="days_exercise_dialog_time_minutes">min / serie</string>
    <string name="days_exercise_dialog_time_rest">Descanso</string>
    <string name="days_exercise_dialog_notes">Notas apuntadas</string>
    <string name="days_exercise_dialog_time_minutes_symbol">\'\'</string>
    <string name="days_exercise_dialog_time_hint">0:00</string>
    <string name="days_exercise_dialog_add_serie">Añadir serie</string>
    <string name="days_exercise_super_serie_switch">Super serie con el siguiente ejercicio</string>
    <string name="days_exercise_dialog_add_notes">¿Quieres añadir alguna nota?</string>
    <string name="days_exercise_dialog_add_notes_hint">Escribe aquí</string>
    <string name="days_exercise_dialog_add">Agregar a %s</string>
    <string name="days_exercise_dialog_edit">Editar</string>
    <string name="days_exercise_dialog_delete_top_text">Eliminar ejercicio</string>
    <string name="days_exercise_dialog_delete_text">¿Quieres eliminar %s de %s?</string>
    <string name="days_exercise_dialog_delete_yes">Eliminar</string>
    <string name="days_exercise_dialog_delete_cancel">Volver</string>
    <string name="routines_add_button">Añadir</string>
    <string name="routines_cancel_button">Cancelar</string>
    <string name="routines_add_title_error">El nombre no puede estar vacío</string>
    <string name="days_add_top_text">Nuevo día</string>
    <string name="days_add_title">Nombre</string>
    <string name="days_add_title_hint">Lunes</string>
    <string name="calendar_delete_day">Eliminar registro</string>
    <string name="calendar_delete_day_text">¿Quieres eliminar este registro del calendario?</string>
    <string name="calendar_delete_day_accept">Eliminar</string>
    <string name="calendar_delete_day_cancel">Cancelar</string>
</resources>