<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_default_routines"
                android:icon="@drawable/ic_error"
                android:title="@string/drawer_item_default_routines" />
            <item
                android:id="@+id/nav_my_routines"
                android:icon="@drawable/ic_error"
                android:title="@string/drawer_item_my_routines" />
        </menu>
    </item>

    <item android:title="@string/sww">
        <menu>
            <item
                android:id="@+id/nav_exercises"
                android:icon="@drawable/ic_error"
                android:title="@string/drawer_item_exercises" />
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_error"
                android:title="@string/drawer_item_notes" />
        </menu>
    </item>
</menu>