<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/bottom_nav_calendar" />

    <item
        android:id="@+id/maximumsFragment"
        android:icon="@drawable/ic_maximum"
        android:title="@string/bottom_nav_maximum" />

    <item
        android:id="@+id/stretchingFragment"
        android:icon="@drawable/ic_stretching"
        android:title="@string/bottom_nav_stretching" />

    <item
        android:id="@+id/notesFragment"
        android:icon="@drawable/ic_notes"
        android:title="@string/bottom_nav_notes" />

</menu>