<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/tv_title"
        style="@style/MediumTextView_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header_dialog"
        android:backgroundTint="@color/light_grey"
        android:contentDescription="@string/content_description"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/calendar_delete_day"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="20dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calendar_delete_day_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                style="@style/MediumTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:background="@drawable/click_effect"
                android:paddingHorizontal="4dp"
                android:text="@string/calendar_delete_day_cancel"
                android:textAllCaps="true"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/btn_delete"
                style="@style/MediumTextView_Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/click_effect"
                android:paddingHorizontal="4dp"
                android:text="@string/calendar_delete_day_accept"
                android:textAllCaps="true"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>